syntax = "proto3";
package message;
import "scalapb/scalapb.proto";

option java_package = "id.co.babe.entityextractor.domain.message";
option java_outer_classname = "DictMessageProtos";

option (scalapb.options) = {
    package_name : "id.co.babe.entityextractor.domain.message"
    primitive_wrappers: true
};

message DictInsertRequest {
    option (scalapb.message).extends = "id.co.babe.entityextractor.marshalling.RequestAware";
    string word = 1;
    string dictType = 2;
}

message RedirectInsertRequest {
    option (scalapb.message).extends = "id.co.babe.entityextractor.marshalling.RequestAware";
    string word = 1;
    string redirect = 2;
}

message DictInsertResponse {
    string result = 1;
}
